--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-app",
+  "homepage": "https://ankesh948.github.io/onlineshop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +16,7 @@
     "bootstrap": "^5.1.3",
     "boxicons": "^2.1.2",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^4.0.0",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
@@ -27,6 +29,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
