--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
+    "lodash.differenceby": "^4.8.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-data-table-component": "^7.5.2",
